[package]
name = "Polly"
version = "0.1.0"
description = "A Rust application for web scraping and data processing for `wBus`."

# Use the `2024` edition of Rust
edition = "2024"

[dependencies]
# Asynchronous runtime
tokio = { version = "1.0", features = ["full"] }

# For concurrency in asynchronous tasks
futures = "0.3.31"

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }

# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Environment variable management
dotenvy = "0.15"

# Error handling
anyhow = "1.0"

# HTML parsing and web scraping
scraper = "0.18"

# Use regex for pattern matching
regex = "1.10"

# Handle geospatial data
geo-types = "0.7"
geojson = "0.24"

# Date and time handling
chrono = "0.4"

# Working with URLs
url = "2.5"

# For EUC-KR encoding support
encoding_rs = "0.8"
percent-encoding = "2.3"

# Logging
tracing-subscriber = "0.3.22"
